# Parallel_Shell_sort_Openmp

./: CMakeLists.txt  main.cpp  sequential_algorithm  veryhard_new.txt
